Fix the box shape

--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,18 @@ html {
 }
 
 .polaroid {
+  display: inline-block;
   margin: 0;
   padding: 10px;
   width: 250px;
-
+  height: 162px;
+  position: relative;
   background-color: #fff;
   border-radius: 4px;
   box-shadow: 1px 4px 6px rgba(0, 0, 0, .5);
+  transform: scale(0.6, 0.76);
+  transition: all 200ms ease;
+
 }
 
 .polaroid > img {
@@ -22,4 +27,33 @@ html {
 .polaroid > figcaption {
   color: #fff;
   text-shadow: 1px 1px 3px #000;
+  position: relative;
+  left: 31%;
+  bottom: 25px;
+}
+
+.polaroid:nth-child(1) {
+  left: 0;
+  top: 150px;
+  transform: rotate(-12deg) ;
+  z-index: 0;
+}
+
+.polaroid:nth-child(2) {
+  left: 0;
+  top: 150px;
+  transform: rotate(6deg) ;
+  z-index: 100;
+}
+
+.polaroid:nth-child(3) {
+  left: 0;
+  top: 150px;
+  transform: rotate(30deg) ;
+}
+
+/**!!!!!!!!!!!!!!!!!!!!! HOVER STATES START HERE !!!!!!!!!!!!!!!!!!!!!!!!!**/
+.polaroid:hover {
+  transform: rotate(0deg);
+  z-index: 100;
 }
